fixed typo (closes #5)

--- a/content/02_Process.ipynb
+++ b/content/02_Process.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "#### Model Planing\n",
     "\n",
-    "The goal of the model planning is to design the models for the data. This means that you must decide how exactly you want to analyze the data and which models you want to use to gain insights. The models must be suited both for the use case and the available data. There are different aspects that influence the candidates for suitable models. The goal of the analysis usually prescribes the type of model that may be used.\n",
+    "The goal of the model planning is to design the models for the data analysis. This means that you must decide how exactly you want to analyze the data and which models you want to use to gain insights. The models must be suited both for the use case and the available data. There are different aspects that influence the candidates for suitable models. The goal of the analysis usually prescribes the type of model that may be used.\n",
     "\n",
     "- Association rule mining can be used if the goal is to identify rules that describe relevant relationships within transactions (Chapter 5). \n",
     "- Clustering can be used to identify groups in a large set of data (Chapter 6). \n",
