fixes the variability measures example

--- a/content/03_Data-Exploration.ipynb
+++ b/content/03_Data-Exploration.ipynb
@@ -211,8 +211,8 @@
       "sd:  2.031568135925815\n",
       "IQR: 2.255000000000001\n",
       "With outlier\n",
-      "mean:   26.77235292350312\n",
-      "median: 2.465\n"
+      "sd:  26.77235292350312\n",
+      "IQR: 2.465\n"
      ]
     }
    ],
@@ -226,8 +226,8 @@
     "\n",
     "data.append(100)\n",
     "print('With outlier')\n",
-    "print('mean:  ', statistics.stdev(data))\n",
-    "print('median:', stats.iqr(data))"
+    "print('sd: ', statistics.stdev(data))\n",
+    "print('IQR:', stats.iqr(data))"
    ]
   },
   {
