toc without section expansion

--- a/content/Exercises.ipynb
+++ b/content/Exercises.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Exercises\n",
     "\n",
-    "This online book is accompanied by some exercises that accompany the chapters to improve the understanding of the concepts. The exercises are provided as Jupyter notebooks, in which you can directly start to solve your exercises. \n",
+    "This online book is accompanied by some exercises that accompany the chapters to improve the understanding of the concepts. The exercises are provided as Jupyter notebooks, in which you can directly start to solve your exercises. Just use the download links at the top of the pages. \n",
     "\n",
-    "- [Getting Started](exercises/Exercise_Getting_Started.ipynb)\n",
-    "- [CSV Files and Data Frames](exercises/Exercise_CSV_and_DataFrames.ipynb)\n",
-    "- [Data Exploration](exercises/Exercise_Data_Exploration.ipynb)"
+    "- [A Brief Introduction to Jupyter Notebooks](exercises/Exercise_Getting_Started)\n",
+    "- [CSV Files and Data Frames](exercises/Exercise_CSV_and_DataFrames)\n",
+    "- [Data Exploration with Descriptive Statistics and Visualizations](exercises/Exercise_Data_Exploration)"
    ]
   }
  ],
