fix standard deviation formula (closes #7)

--- a/content/03_Data-Exploration.ipynb
+++ b/content/03_Data-Exploration.ipynb
@@ -187,7 +187,7 @@
     "The variability measures how far the data is spread out. A small variability means that most data is close to the central tendency of the data. A high variability means that the data is spread out over a large range. \n",
     "\n",
     "The most common measure for the variability is the *standard deviation*, which is defined as\n",
-    "$$sd(x) = \\sqrt{\\frac{\\sum_{i=1}^n |x_i-mean(x)|}{n-1}}.$$\n",
+    "$$sd(x) = \\sqrt{\\frac{\\sum_{i=1}^n (x_i-mean(x))^2}{n-1}}.$$\n",
     "\n",
     "The standard deviation is the square root of the arithmetic mean of the difference from the arithmetic mean, except that the division is by $n-1$ instead of $n$. This is due to something called *degrees of freedom*, which we do not discuss here further. Thus, the standard deviation tells us how much deviation from the mean value we can expect. The standard deviation works well as a measure for the variability, when the mean value is a suitable representation for the central tendency. This means that the standard deviation is also a *parametric* measure for the variability, that can also be misleading.\n",
     "\n",
