--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "- Chapter 1: Finished.\n",
     "- Chapter 2: Finished.\n",
-    "- Chapter 3: Content complete, requires proof reading.\n",
+    "- Chapter 3: Finished.\n",
     "- Chapter 4: Content complete, requires proof reading.\n",
     "- Chapter 5: Content complete, requires proof reading.\n",
     "- Chapter 6: Content complete, requires proof reading.\n",
