--- a/content/04_Data-Analysis-Overview.ipynb
+++ b/content/04_Data-Analysis-Overview.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## No Free Lunch Theorem (NFL)\n",
     "\n",
-    "Before we dive into the algorithms for the creation of models about the data, we need some foundations. The first foundation is a fundamental theorem about optimization algorithms, the *No Free Lunch Theorem* (NFL). This now gets a bit theoretical, if you are just interested into the the (very important!) consequences of the theorem on data modeling, just skip to the colloquial definition. The mathematical formulation of the NFL is the following. \n",
+    "Before we dive into the algorithms for the creation of models about the data, we need some foundations. The first foundation is a fundamental theorem about optimization algorithms, the *No Free Lunch Theorem* (NFL). This now gets a bit theoretical, if you are just interested in the (very important!) consequences of the theorem on data modeling, just skip to the colloquial definition. The mathematical formulation of the NFL is the following. \n",
     "\n",
     "> **No Free Lunch Theorem:**\n",
     ">\n",
@@ -24,7 +24,7 @@
     ">\n",
     "> All algorithms are equal, when all possible problems are considered. \n",
     "\n",
-    "This is counter-intuitive, because we observe notable differences between different algorithms in practice. However, the NFL does not prohibit that an algorithm is better for some functions $f$ - i.e., for some problems. But if an algorithm is better than the average algorithm for some problems, the NFL tells us that the algorithm must be worse than the average algorithm for other problems. Thus, the true consequence of the NFL is that *there is not one algorithm that is optimal for all problems*. Instead, different algorithms are better on different for different problems. That is also the reason for the name: there is no \"free lunch\", i.e., one algorithm for all problems. Instead, data scientist must earn their lunch, i.e., find a suitable algorithm. \n",
+    "This is counter-intuitive, because we observe notable differences between different algorithms in practice. However, the NFL does not prohibit that an algorithm is better for some functions $f$ - i.e., for some problems. But if an algorithm is better than the average algorithm for some problems, the NFL tells us that the algorithm must be worse than the average algorithm for other problems. Thus, the true consequence of the NFL is that *there is not one algorithm that is optimal for all problems*. Instead, different algorithms are better for different problems. That is also the reason for the name: there is no \"free lunch\", i.e., one algorithm for all problems. Instead, data scientists must earn their lunch, i.e., find a suitable algorithm. \n",
     "\n",
     "This means that having detailed knowledge about one algorithm is not sufficient. Data scientists need a whole toolbox of algorithms. They must be able to select a suitable algorithm, based on the data, their knowledge about the problem, and their experience based on working with different algorithms. Over the time, data scientists gather experience with more and more algorithms and become experts in selecting suitable algorithms for a given problem. \n",
     "\n",
@@ -54,7 +54,7 @@
     "\n",
     "How exactly humans recognize objects is still a matter of research. However, let us assume we identify what different parts of the picture are and then know what the complete picture is about by combining these parts. For example, we might see that there is a roughly *oval shaped* object in the foreground, that is *black on top and white on the bottom*, that *has fins* and is in front of a mostly *blue background*. We can describe the picture using this information as *features*. \n",
     "\n",
-    "This is what machine learning is about: reasoning about objects by representing them in as features. Formally, we have an *object space* $O$ with real-world objects and a *feature space* $\\mathcal{F}$ with descriptions of the objects. A feature map $\\phi: O \\to \\mathcal{F}$ maps the objects to their representation in the feature space. \n",
+    "This is what machine learning is about: reasoning about objects by representing them as features. Formally, we have an *object space* $O$ with real-world objects and a *feature space* $\\mathcal{F}$ with descriptions of the objects. A feature map $\\phi: O \\to \\mathcal{F}$ maps the objects to their representation in the feature space. \n",
     "\n",
     "For our whale picture, the object space $O$ would be pictures and the feature space $\\mathcal{F}$ would have five dimensions: shape, top color, bottom color, background color, has fins. The feature representation of the whale picture would be $\\phi(whale picture) = (oval, black, white, blue, true)$. \n",
     "\n",
@@ -76,7 +76,7 @@
     "$$x^{white} = \\cases{1 & if $x=white$ \\\\ 0 & otherwise}$$\n",
     "$$x^{blue} = \\cases{1 & if $x=blue$ \\\\ 0 & otherwise}$$\n",
     "\n",
-    "With the approach above, we need $n$ new categories, if the scale of our original feature has $n$ distinct values. In the example above, we have three new features for a scale with three values. It is also possible to use one-hot encoding with $n-1$ new features. We could just leave out $x^{blue}$ from our example and still always know when the value would have been blue: when it is neither black nor white, i.e., when $x^{black}=x^{white}=0$. This is especially useful to concert scales with exactly two values. Please note that while one-hot encoding is a useful approach, it does not work well if you have lots of categories, because a lot of new features are introduced. Moreover, the order of ordinal features is lost, i.e., we lose information when one-hot encoding is used for ordinal features. \n",
+    "With the approach above, we need $n$ new categories, if the scale of our original feature has $n$ distinct values. In the example above, we have three new features for a scale with three values. It is also possible to use one-hot encoding with $n-1$ new features. We could just leave out $x^{blue}$ from our example and still always know when the value would have been blue: when it is neither black nor white, i.e., when $x^{black}=x^{white}=0$. This is especially useful to convert scales with exactly two values. Please note that while one-hot encoding is a useful approach, it does not work well if you have lots of categories, because a lot of new features are introduced. Moreover, the order of ordinal features is lost, i.e., we loose information when one-hot encoding is used for ordinal features. \n",
     "\n",
     "## Training and Test Data\n",
     "\n",
@@ -116,7 +116,7 @@
     "\n",
     "<img src=\"images/crossvalidation.png\" alt=\"Cross-Validation\" style=\"width: 500px;\"/>\n",
     "\n",
-    "The performance is then estimate as the mean of the results of the testing on each partition. With cross-validation, each instance in the data is used as test data exactly once. The drawback of cross-validation is that there is no real test data. Instead, what we called test data - because that is the common terminology in the literature with respect to cross-validation - is actually only validation data. Thus, cross-validation may not detect all types of overfitting and tends to overestimate the performance of models. Thus, you should use hold-out data whenever possible. \n",
+    "The performance is then estimated as the mean of the results of the testing on each partition. With cross-validation, each instance in the data is used as test data exactly once. The drawback of cross-validation is that there is no real test data. Instead, what we called test data - because that is the common terminology in the literature with respect to cross-validation - is actually only validation data. Thus, cross-validation may not detect all types of overfitting and tends to overestimate the performance of models. Thus, you should use hold-out data whenever possible. \n",
     "\n",
     "\n",
     "## Categories of Algorithms\n",
