--- a/content/05_Association-Rule-Mining.ipynb
+++ b/content/05_Association-Rule-Mining.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Overview\n",
     "\n",
-    "Associations are relationships between objects. The idea behind association rule mining is to determine rules, that allow us to identify which objects may be related to a set of objects were already know. In the association mining terminology, we refer to the objects as *items*. A common example for association rule mining is basket analysis. A shopper puts items from a store into a basket. Once there are some items in the basket, it is possible to recommend associated items that are available in the store to the shopper. \n",
+    "Associations are relationships between objects. The idea behind association rule mining is to determine rules, that allow us to identify which objects may be related to a set of objects we already know. In the association rule mining terminology, we refer to the objects as *items*. A common example for association rule mining is basket analysis. A shopper puts items from a store into a basket. Once there are some items in the basket, it is possible to recommend associated items that are available in the store to the shopper. \n",
     "\n",
     "<img src=\"images/associationsrules_general.png\" alt=\"Example for Associations\" style=\"width: 500px;\"/>\n",
     "\n",
@@ -21,9 +21,9 @@
     "\n",
     "<img src=\"images/associationsrules_abstract.png\" alt=\"Association Rule Mining\" style=\"width: 500px;\"/>\n",
     "\n",
-    "The relationship that the rules describe should be \"interesting\". The meaning of interesting is defined by the use case. In the example above, interesting is defined as \"shoppers bought items together\". If the association rules should, e.g., groups of collaborators, interesting would be defined as \"worked together in the past\".\n",
+    "The relationship that the rules describe should be \"interesting\". The meaning of interesting is defined by the use case. In the example above, interesting is defined as \"shoppers bought items together\". If the association rules should, e.g., find groups of collaborators, interesting would be defined as \"worked together in the past\".\n",
     "\n",
-    "We can also formally define the association rule mining. We have a finite set of items $I = \\{i_1, ..., i_m\\}$ and transactions that are a subset of the items, i.e., transactions $T = \\{t_1, ..., t_n \\}$ with $t_j \\subseteq I, j=1, ..., n$. Association rules are logical rules of the form $X \\Rightarrow Y$, where $X$ and $Y$ are disjoint subsets of items, i.e., $X, Y \\subseteq I$ and $X \\cap Y = \\emptyset$. We refer to $X$ as the *antecedent* or left-hand-side of the rule and to $Y$ as the *consequent* or right-hand-side of the rule.\n",
+    "We can also formally define association rule mining. We have a finite set of items $I = \\{i_1, ..., i_m\\}$ and transactions that are a subset of the items, i.e., transactions $T = \\{t_1, ..., t_n \\}$ with $t_j \\subseteq I, j=1, ..., n$. Association rules are logical rules of the form $X \\Rightarrow Y$, where $X$ and $Y$ are disjoint subsets of items, i.e., $X, Y \\subseteq I$ and $X \\cap Y = \\emptyset$. We refer to $X$ as the *antecedent* or left-hand-side of the rule and to $Y$ as the *consequent* or right-hand-side of the rule.\n",
     "\n",
     "> *Note:*\n",
     ">\n",
@@ -91,7 +91,7 @@
     "\n",
     "The algorithm is based on the concept of the *support* of itemsets $IS \\subseteq I$. The support of an itemset $IS$ is defined as the ratio of transaction in which all items $i \\in IS$ occur, i.e., $$support(IS) = \\frac{|\\{t \\in T: IS \\subseteq T\\}}{|T|}.$$\n",
     "\n",
-    "The support mimics our generic definition of interesting from above, because it directly measures how often combinations of items occur. Thus, support is an indirect measure for interestingness. What we are still missing is a minimal level of interestingness for us to consider building rules from an itemset. We define this using a minimal level of support that is required for such that an itemset occur often enough to be interesting. All itemsets that have a support greater than this threshold are called *frequent itemset*. Formally, we call an itemset frequent $IS \\subset I$, if $support(IS) \\geq minsupp$ for a minimal required support $minsupp \\in [0,1]$. \n",
+    "The support mimics our generic definition of interesting from above, because it directly measures how often combinations of items occur. Thus, support is an indirect measure for *interestingness*. What we are still missing is a minimal level of interestingness for us to consider building rules from an itemset. We define this using a minimal level of support that is required for an itemset. All itemsets that have a support greater than this threshold are called *frequent itemset*. Formally, we call an itemset frequent $IS \\subset I$, if $support(IS) \\geq minsupp$ for a minimal required support $minsupp \\in [0,1]$. \n",
     "\n",
     "In our example above, the items item2, item3, and item4 would have $support(\\{item2, item3, item4\\}) = \\frac{3}{10}$, because all three items occur together in three of the ten transactions. Thus, if we use $minsupp=0.3$, this we would call $\\{item2, item3, item4\\}$ frequent. Overall, we find the following frequent itemsets."
    ]
@@ -329,7 +329,7 @@
     "\n",
     "### Confidence, Lift, and Leverage\n",
     "\n",
-    "The still open question is, how we may decide if these rules are good and actually show meaningful associations, or if they are just the result of random effects. This cannot be decided based on the support. For example, consider a Web shop with free items. These items are likely in very many baskets. Thus, they will be part of many frequent itemsets. However, we cannot really follow anything from this item, because it is just added randomly because it is free, not because it is associated with other items. Moreover, the support of a rule $X \\Rightarrow Y$ is always the same as for the rule $Y \\Rightarrow X$. However, there may be differences, because causal associations are often directed. The measures of *confidence*, *lift*, and *leverage* may be used to see if a rule a is random or if there is really an association. \n",
+    "An open question is how we may decide if these rules are good or not. Thus, we need measures to identify if the associations are meaningful or if they are just the result of random effects. This cannot be decided based on the support alone. For example, consider a Web shop with free items. These items are likely in very many baskets. Thus, they will be part of many frequent itemsets. However, we cannot really conclude anything from this item, because it is just added randomly because it is free, not because it is associated with other items. Moreover, the support of a rule $X \\Rightarrow Y$ is always the same as for the rule $Y \\Rightarrow X$. However, there may be differences, because causal associations are often directed. The measures of *confidence*, *lift*, and *leverage* can be used to see if a rule a is random or if there is really an association. \n",
     "\n",
     "The confidence of a rule is defined as $$confidence(X \\Rightarrow Y) = \\frac{support(X \\cup Y)}{support(X)},$$\n",
     "i.e. the confidence is the ratio of observing the antecedent and the consequent together in relation to only the transactions that contain $X$. A high confidence indicates that the consequent often occurs when the antecedent is in a transaction. \n",
@@ -493,12 +493,12 @@
     "\n",
     "The best rule with a single item as antecedent is $\\{item3\\} \\Rightarrow \\{item2, item4\\}$ with a confidence of 0.75 and a lfit of 1.5. Thus, in 75% of the transactions in which item3 occurs, the items item2 and item4 are also present, which is 1.5 times more often than expected. \n",
     "\n",
-    "The example also shows some general properties of the measures. Most importantly, lift and leverage are the same, if lift and leverage are switched, same as the support. Thus, confidence is the only measure we have introduced that takes the causality of the associations into account. We can also observe that the changes in lift an leverage are similar. The lift has the advantage that there the values allow a straight forward interpretation. \n",
+    "The example also shows some general properties of the measures. Most importantly, lift and leverage are the same, if antecedent and consequent are switched, same as the support. Thus, confidence is the only measure we have introduced that takes the causality of the associations into account. We can also observe that the changes in lift an leverage are similar. The lift has the advantage that the values allow a straight forward interpretation. \n",
     "\n",
     "### Exponential Growth\n",
     "\n",
     "We have now shown how we can determine rules: we need to find frequent itemsets and can then derive rules from these sets. Unfortunately, finding the frequent itemsets is not trivial. The problem is that the number of itemsets grows exponentially with the number of items. The possible itemsets are the powerset $\\mathcal{P}$ of $I$, which means there are $|\\mathcal{P}(I)|=2^{|I|}$ possible itemsets. Obviously, there are only very few use cases, where we would really need to consider all items, because often shorter rules are preferable. Unfortunately, the growth is still exponential, even if we restrict the size. We can use the binomial coefficient $${|I| \\choose k} = \\frac{|I|!}{(|I|-k)!k!}$$\n",
-    "to calculate the number of itemsets of size k. For example, if we have |I|=100 items, there are already 161,700 possible itemsets of size $k=3$. From we can generate eight rules for each of these itemsets, thus we already have 1,293,600 possible rules. If we ignore rules with the empty itemset, we still have 970,200 possible rules. \n",
+    "to calculate the number of itemsets of size k. For example, if we have |I|=100 items, there are already 161,700 possible itemsets of size $k=3$. We can generate eight rules for each of these itemsets, thus we already have 1,293,600 possible rules. If we ignore rules with the empty itemset, we still have 970,200 possible rules. \n",
     "\n",
     "Thus, we need a way to search the possible itemsets strategically to deal with the exponential nature, as attempt to find association rules could easily run out of memory or require massive amounts of computational resources, otherwise. \n",
     "\n",
@@ -589,7 +589,7 @@
     "| $\\{item4, item7\\}$ | 0.1     |   x  |\n",
     "| $\\{item5, item7\\}$ | 0.0     |   x  |\n",
     "\n",
-    "As can see, only the combinations with the items item2, item3, and item4 are frequent, all others can be dropped. This leaves is with a single combination for $k=3$.\n",
+    "As we can see, only the combinations with the items item2, item3, and item4 are frequent, all others can be dropped. This leaves is with a single combination for $k=3$.\n",
     "\n",
     "| Itemset with $k=3$       | support | Drop |\n",
     "|--------------------------|---------|------|\n",
@@ -603,7 +603,7 @@
     "\n",
     "## Evaluating Association Rules\n",
     "\n",
-    "The final question that we have not yet answered is how we can determine if associations rules we determined are good, i.e., we found real associations and not random rules. The confidence, lift, and leverage already support this and if these measures are used in combination they are a good tool to identify rules. Confidence tells you if the relationship may be random, because the antecedent occurs very often, lift and leverage can tell you if the relationship is coincidental. \n",
+    "The final question that we have not yet answered is how we can determine if the associations rules we determined are good, i.e., if we found real associations and not random rules. The confidence, lift, and leverage already support this and if these measures are used in combination they are a good tool to identify rules. Confidence tells you if the relationship may be random, because the antecedent occurs very often, lift and leverage can tell you if the relationship is coincidental. \n",
     "\n",
     "However, there are additional ways to validate that the association rules are good. For example, you can split your data into training and test data. You can then evaluate how often the associations you find in the training data also appear in the test data. If there is a big overlap, the association rules are likely good. You can also go one step further and remove items from transaction in the test data and see if your rules can predict the missing items correctly. \n",
     "\n",
