--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -53,8 +53,8 @@
     "- Chapter 1: Finished.\n",
     "- Chapter 2: Finished.\n",
     "- Chapter 3: Finished.\n",
-    "- Chapter 4: Content complete, requires proof reading.\n",
-    "- Chapter 5: Content complete, requires proof reading.\n",
+    "- Chapter 4: Finished.\n",
+    "- Chapter 5: Finished.\n",
     "- Chapter 6: Content complete, requires proof reading.\n",
     "- Chapter 7: Work in progress.\n",
     "- Chapter 8: Not available.\n",
