--- a/content/Exercises.ipynb
+++ b/content/Exercises.ipynb
@@ -11,7 +11,8 @@
     "- [A Brief Introduction to Jupyter Notebooks](exercises/Exercise_Getting_Started)\n",
     "- [CSV Files and Data Frames](exercises/Exercise_CSV_and_DataFrames)\n",
     "- [Data Exploration with Descriptive Statistics and Visualizations](exercises/Exercise_Data_Exploration)\n",
-    "- [Association Rule Mining](exercises/Exercise_Association_Rule_Mining)"
+    "- [Association Rule Mining](exercises/Exercise_Association_Rule_Mining)\n",
+    "- [Clustering](exercises/Exercise_Clustering)"
    ]
   }
  ],
