clarified outlier description of boxplots (closes #10)

--- a/content/03_Data-Exploration.ipynb
+++ b/content/03_Data-Exploration.ipynb
@@ -1008,7 +1008,7 @@
     "- The locations of the boxes, i.e., in which range is most of the data located.\n",
     "- The length of the boxes, i.e., how spread out is the central data.\n",
     "- The length of the whiskers, i.e., the range of the overall data.\n",
-    "- How many outliers exist and where they are located, e.g., if they are extreme outliers are relatively close to the whiskers. \n",
+    "- How many outliers exist and where they are located, e.g., if they are extreme outliers or if they are relatively close to the whiskers. \n",
     "- If the median is in the mid of the box or if the median is closer to one of the quartiles. Together with the lengths of each whisker, this can be be used as an indicator for skew in the data. \n",
     "\n",
     "We can learn a lot about the Iris data from the boxplot, e.g., the following.\n",
