--- a/content/01_Introduction.ipynb
+++ b/content/01_Introduction.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "### Insights, decision making, and process automation\n",
     "\n",
-    "The final part of the definition means that having large amounts of data is not yet big data. Data can only become big data, if it is actually used, e.g., to generate insights, guide decision making, or even automated parts of a business process. This aspect is so important, this there are also definitions of big data in which there is an additional V for *value*. \n",
+    "The final part of the definition means that having large amounts of data is not yet big data. Data can only become big data, if it is actually used, e.g., to generate insights, guide decision making, or even automated parts of a business process. This aspect is so important, that there are also definitions of big data in which there is an additional V for *value*. \n",
     "\n",
     "\n",
     "### More Vs\n",
