--- a/content/07_Classification.ipynb
+++ b/content/07_Classification.ipynb
@@ -327,7 +327,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The closer the AUC value is to one, the better the performance of our classifier. In terms of interpretation, AUC has similar problems as MCC: while a value of 1 is optimal, the worst value is not 0, but rather 0.5. This is because if we just randomly guess if we have a positive or a negative instance, the TPR equals the FPR, which is the diagonal of the ROC curve. Thus, an AUC value of 0.5 represents random guessing. A value of 0 means that we have a TPR of 0 and an FPR 1. Same as for negative values of MCC, we could just do the opposite of the hypothesis and get a perfect result. Consequently, values of AUC are better, the farther they are away from 0.5. "
+    "The closer the AUC value is to one, the better the performance of our classifier. In terms of interpretation, AUC has similar problems as MCC: while a value of 1 is optimal, the worst value is not 0, but rather 0.5. This is because if we just randomly guess if we have a positive or a negative instance, the TPR equals the FPR, which is the diagonal of the ROC curve. Thus, an AUC value of 0.5 represents random guessing. A value of 0 means that we have a TPR of 0 and an FPR 1. Same as for negative values of MCC, we could just do the opposite of the hypothesis and get a perfect result. Consequently, values of AUC are better, the farther they are away from 0.5. \n",
+    "\n",
+    "### Micro and Macro Averages\n",
+    "\n",
+    "All performance metrics we discussed so far are defined using the binary confusion matrix. While the concept of accuracy can be generalized to more than two classes, because it the percentage of correctly classified classes, this is not easily possible with the other metrics. However, we can define multiple binary confusion matrices from a non-binary confusion matrices. Consider our confusion matrix with three classes from above.\n",
+    "\n",
+    "<table>\n",
+    "    <tr><td></td><td colspan=4><b>Actual class</b></td></tr>\n",
+    "    <tr><td rowspan=4><br><br><b>Predicted class</b></td><td><td><b>whale</b></td><td><b>bear</b></td><td><b>other</b></td></tr>\n",
+    "    <tr><td><b>whale</b></td><td>29</td><td>1</td><td>3</td></tr>\n",
+    "    <tr><td><b>bear</b></td><td>2</td><td>22</td><td>13</td></tr>\n",
+    "    <tr><td><b>other</b></td><td>4</td><td>11</td><td>51</td></tr>\n",
+    "</table>\n",
+    "\n",
+    "We can define three confusion matrices from this confusion matrix, in each of which one class is positive and all other classes negative. Here is the example with whale as positive class.  \n",
+    "\n",
+    "<table>\n",
+    "    <tr><td></td><td colspan=3><b>Actual class</b></td></tr>\n",
+    "    <tr><td rowspan=3><br><br><b>Predicted class</b></td><td><td><b>whale</b></td><td><b>not whale</b></td></tr>\n",
+    "    <tr><td><b>whale</b></td><td>$TP_{whale} = 29$</td><td>$FP_{whale} = 5$</td></tr>\n",
+    "    <tr><td><b>not whale</b></td><td>$FN_{whale} = 6$</td><td>$TN_{whale} = 97$</td></tr>\n",
+    "</table>\n",
+    "\n",
+    "We can calculate all performance metrics from above now individually for all classes, e.g., the TPR for the class whale as\n",
+    "$$TPR_{whale} = \\frac{TP_{whale}}{TP_{whale}+FN_{whale}}.$$\n",
+    "\n",
+    "If we want to get performance metrics for all classes at once, we can use *macro averaging* and *micro averaging*. The macro average of a performance metric is the arithmetic mean of the metric applied individually for all classes. For example, for the TPR the macro average is defined as $$TPR_{macro} = \\frac{1}{|C|}\\sum_{c \\in C}\\frac{TP_{c}}{TP_{c}+FN_{c}}.$$\n",
+    "\n",
+    "With micro averaging, the performance metric is calculated directly by changing the formulas to use the sum of all classes. For example, the micro average is defined as $$ TPR_{micro} = \\frac{\\sum_{c \\in C} TP_C}{\\sum_{c \\in C} TP_C + \\sum_{c \\in C} FN_C}.$$\n",
+    "\n",
+    "Whether the macro average or the micro average is a better choice depends on the use case and the data. If the data is balanced, i.e., there is a similar amount of data for each class, the results for the macro average and the micro average will be almost the same. When the data is imbalance, i.e., there are classes for which there a fewer instances than others, the macro average will treat all classes the same. Because the macro average is the arithmetic mean of the performance metrics for each class, the impact on the average is the same for all classes. This is not the case for the micro average, where classes with less instances have a smaller impact, because the count is lower and the individual counts are used. \n",
+    "\n",
+    "Thus, in case of class level imbalance, the macro average has the advantage that all classes are fairly represented in the average. The drawback of this is that classes with only few instances may have an overly large impact on the macro average. Vice versa, the impact on the micro average of each class is only as large as the number of instances for the class, but there is a risk that classes with few instances may be ignored. \n",
+    "\n",
+    "### Beyond the Confusion Matrix\n",
+    "\n",
+    "All metrics above are defined using the confusion matrix. This is the standard approach for performance estimation in the machine learning literature. However, while such metrics are common and often have a relation to use cases, they all have one assumption, which is usually unrealistic: all errors are equal. In practice, some errors matter more than other errors. For example, lending a huge amount of money to a customer caries a greater risk than a small loan. If a customer defaults on a large loan, the impact of a false positive credit score is thus larger than for a small loan. Therefore, it is always a good idea to think about concrete costs, benefits and risks associated with the true positives, false positives, true negatives, and false negatives and ideal define a cost matrix that specifies how the individual gains and losses for each of these cases. This way, you can define a customized cost function for use cases, which usually means that you get more meaningful results, e.g., [demonstrated here](https://www.kdnuggets.com/2016/12/salford-costs-misclassifications.html)."
    ]
   },
   {
