fix typos (closes #16)

--- a/content/04_Data-Analysis-Overview.ipynb
+++ b/content/04_Data-Analysis-Overview.ipynb
@@ -130,7 +130,7 @@
     "- *Time series analysis* is about the the analysis of temporal data, e.g., daily, weekly, or monthly data. Time series analysis goes beyond regression, because aspects like the season are considered. We cover ARIMA in Chapter 9. \n",
     "- *Text mining* of unstructured textual data. All approaches above may be applied to text, once a structure was imposed. We cover a basic bag-of-words approach for text mining in Chapter 10. \n",
     "\n",
-    "Association rule mining and clustering are examples for unsupervised learning. Both work only based on patterns within the data without any guidance by a value of interest. Hence, such approaches are also called *pattern recognition*. Classification, regression, and time series analysis are examples for supervised learning. These approaches work based learning how known values can be correctly learned from the values of features. "
+    "Association rule mining and clustering are examples for unsupervised learning. Both work only based on patterns within the data without any guidance by a value of interest. Hence, such approaches are also called *pattern recognition*. Classification, regression, and time series analysis are examples for supervised learning. These approaches work based on learning how known values can be correctly learned from the values of features. "
    ]
   }
  ],
