--- a/content/Solutions.ipynb
+++ b/content/Solutions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Solutions\n",
     "\n",
-    "You can find sample solutions for the exercises on this page. **We strongly recommend that you to the exercises on your own, before looking at these solutions!**\n",
+    "You can find sample solutions for the exercises on this page. **We strongly recommend that you solve the exercises on your own, before you take a look these solutions!**\n",
     "\n",
     "- [CSV Files and Data Frames](exercises/Solution_CSV_and_DataFrames)\n",
     "- [Data Exploration with Descriptive Statistics and Visualizations](exercises/Solution_Data_Exploration)"
