added solution for association rule exercise

--- a/content/Solutions.ipynb
+++ b/content/Solutions.ipynb
@@ -9,7 +9,8 @@
     "You can find sample solutions for the exercises on this page. **We strongly recommend that you solve the exercises on your own, before you take a look these solutions!**\n",
     "\n",
     "- [CSV Files and Data Frames](exercises/Solution_CSV_and_DataFrames)\n",
-    "- [Data Exploration with Descriptive Statistics and Visualizations](exercises/Solution_Data_Exploration)"
+    "- [Data Exploration with Descriptive Statistics and Visualizations](exercises/Solution_Data_Exploration)\n",
+    "- [Association Rule Mining](exercises/Exercise_Association_Rule_Mining)"
    ]
   }
  ],
