more sample solutions

--- a/content/exercises/Solution_Association_Rule_Mining.ipynb
+++ b/content/exercises/Solution_Association_Rule_Mining.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Association Rule Mining\n",
     "\n",
-    "Within this exercise, you can get a deeper understanding of association rule mining and learn how to identify good rules for a sample data set. \n",
+    "This is a sample solution for the association rule mining exercise. This does not mean that this is the only way to solve this exercise. As with any programming task - and also with most data analysis tasks - there are multiple solutions for the same problem. \n",
     "\n",
     "## Libraries and Data\n",
     "\n",
