--- a/content/Solutions.ipynb
+++ b/content/Solutions.ipynb
@@ -10,7 +10,8 @@
     "\n",
     "- [CSV Files and Data Frames](exercises/Solution_CSV_and_DataFrames)\n",
     "- [Data Exploration with Descriptive Statistics and Visualizations](exercises/Solution_Data_Exploration)\n",
-    "- [Association Rule Mining](exercises/Exercise_Association_Rule_Mining)"
+    "- [Association Rule Mining](exercises/Solution_Association_Rule_Mining)\n",
+    "- [Clustering](exercises/Solution_Clustering)"
    ]
   }
  ],
