fix closing abs bracket for ´support(IS)´ formula

--- a/content/05_Association-Rule-Mining.ipynb
+++ b/content/05_Association-Rule-Mining.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "### Support and Frequent Itemsets\n",
     "\n",
-    "The algorithm is based on the concept of the *support* of itemsets $IS \\subseteq I$. The support of an itemset $IS$ is defined as the ratio of transaction in which all items $i \\in IS$ occur, i.e., $$support(IS) = \\frac{|\\{t \\in T: IS \\subseteq T\\}}{|T|}.$$\n",
+    "The algorithm is based on the concept of the *support* of itemsets $IS \\subseteq I$. The support of an itemset $IS$ is defined as the ratio of transaction in which all items $i \\in IS$ occur, i.e., $$support(IS) = \\frac{|\\{t \\in T: IS \\subseteq T\\}|}{|T|}.$$\n",
     "\n",
     "The support mimics our generic definition of interesting from above, because it directly measures how often combinations of items occur. Thus, support is an indirect measure for *interestingness*. What we are still missing is a minimal level of interestingness for us to consider building rules from an itemset. We define this using a minimal level of support that is required for an itemset. All itemsets that have a support greater than this threshold are called *frequent itemset*. Formally, we call an itemset frequent $IS \\subset I$, if $support(IS) \\geq minsupp$ for a minimal required support $minsupp \\in [0,1]$. \n",
     "\n",
