--- a/content/05_Association-Rule-Mining.ipynb
+++ b/content/05_Association-Rule-Mining.ipynb
@@ -335,10 +335,10 @@
     "i.e. the confidence is the ratio of observing the antecedent and the consequent together in relation to only the transactions that contain $X$. A high confidence indicates that the consequent often occurs when the antecedent is in a transaction. \n",
     "\n",
     "The lift of a rule is defined as $$lift(X \\Rightarrow Y) = \\frac{support(X \\cup Y)}{support(X) \\cdot support(Y)}.$$\n",
-    "The lift measures the ratio between how often the antecedent and the consequent are observed together and how often they would be expected to be observed together, given their individual support. The denominator is the expected value, given that antecedent and consequent are independent of each other. Thus, as lift of 2 means, that $X$ and $Y$ occur twice as often together, as would be expected if there would be no association between the two.  If the antecedent and the consequent are completely independent of each other, the lift is 1. \n",
+    "The lift measures the ratio between how often the antecedent and the consequent are observed together and how often they would be expected to be observed together, given their individual support. The denominator is the expected value, given that antecedent and consequent are independent of each other. Thus, a lift of 2 means, that $X$ and $Y$ occur twice as often together, as would be expected if there was no association between the two.  If the antecedent and the consequent are completely independent of each other, the lift is 1. \n",
     "\n",
     "The leverage of a rule is defined as $$leverage(X \\Rightarrow Y) = support(X \\cup Y) - support(X) \\cdot support(Y).$$\n",
-    "This definition is almost the same as for the lift, except that the difference is used instead of the ratio. Thus, there is a close relationship between lift an leverage. In general, leverage slightly favors itemsets with small support. \n",
+    "This definition is almost the same as for the lift, except that the difference is used instead of the ratio. Thus, there is a close relationship between lift and leverage. In general, leverage slightly favors itemsets with small support. \n",
     "\n",
     "To better understand how the confidence, lift, and leverage work, we look at the values for the rules we derived from the itemset $\\{item2, item3, item4\\}$. "
    ]
@@ -493,7 +493,7 @@
     "\n",
     "The best rule with a single item as antecedent is $\\{item3\\} \\Rightarrow \\{item2, item4\\}$ with a confidence of 0.75 and a lfit of 1.5. Thus, in 75% of the transactions in which item3 occurs, the items item2 and item4 are also present, which is 1.5 times more often than expected. \n",
     "\n",
-    "The example also shows some general properties of the measures. Most importantly, lift and leverage are the same, if antecedent and consequent are switched, same as the support. Thus, confidence is the only measure we have introduced that takes the causality of the associations into account. We can also observe that the changes in lift an leverage are similar. The lift has the advantage that the values allow a straight forward interpretation. \n",
+    "The example also shows some general properties of the measures. Most importantly, lift and leverage are the same, if antecedent and consequent are switched, same as the support. Thus, confidence is the only measure we have introduced that takes the causality of the associations into account. We can also observe that the changes in lift and leverage are similar. The lift has the advantage that the values allow a straight forward interpretation. \n",
     "\n",
     "### Exponential Growth\n",
     "\n",
