--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -35,12 +35,12 @@
     "\n",
     "- Python 3.6 or newer.\n",
     "- Jupyter Notebook (tested with version 5.7.8, but should likely also work with all newer and most older versions).\n",
-    "- The python libraries numpy, scipy, scikit-learn (at least 0.22), pandas, matplotlib, and mlxtend.\n",
+    "- The python libraries numpy, scipy, scikit-learn (at least 0.22), pandas, matplotlib, seaborn, and mlxtend.\n",
     "\n",
     "We recommend to setup a local environment as follows: \n",
     "- [Install Python](https://realpython.com/installing-python/)\n",
     "- [Install Jupyter Notebook](https://jupyter.org/install). We recommend installation with pip, because you get this delivered with Python. More experienced users can also use conda. \n",
-    "- Install the required libraries with pip (```pip install numpy scipy scikit-learn pandas matplotlib mlxtend```). This may require sudo/admin rights. You can also install this in your user space if you add ``--user`` to the command. \n",
+    "- Install the required libraries with pip (```pip install numpy scipy scikit-learn pandas matplotlib mlxtend seaborn```). This may require sudo/admin rights. You can also install this in your user space if you add ``--user`` to the command. \n",
     "\n",
     "\n",
     "You should now be able to fire up your installation of Jupyter with the command ```jupyter notebook```. Jupyter Notebook runs in the browser and initially shows the home folder in your local file system. You can navigate to the destination where you downloaded the notebooks and open them. You could also upload them to the currently open folder using the browser. \n",
@@ -55,7 +55,7 @@
     "- Chapter 3: Finished.\n",
     "- Chapter 4: Finished.\n",
     "- Chapter 5: Finished.\n",
-    "- Chapter 6: Content complete, requires proof reading.\n",
+    "- Chapter 6: Finished.\n",
     "- Chapter 7: Work in progress.\n",
     "- Chapter 8: Not available.\n",
     "- Chapter 9: Not available.\n",
