fix formula for chebyshev distance

--- a/content/06_Clustering.ipynb
+++ b/content/06_Clustering.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "Thus, the value of the Chebychev norm is maximum of the distances in any direction. The Chebyshev distance is based on the maximum norm $||\\cdot||_\\infty$ and defined as\n",
     "\n",
-    "$$d(x,y) = ||y-x||_\\infty = \\max_{i=1, ..., n} |y_1-x_1|.$$\n",
+    "$$d(x,y) = ||y-x||_\\infty = \\max_{i=1, ..., n} |y_i-x_i|.$$\n",
     "\n",
     "### Evaluation of Clustering Results\n",
     "\n",
