new runtime analysis for clustering and work on classification

--- a/content/07_Classification.ipynb
+++ b/content/07_Classification.ipynb
@@ -726,7 +726,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1031,12 +1030,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logistic Regression"
+    "## Logistic Regression\n",
+    "\n",
+    "Logistic regression tries to estimate the *odds* that an instance belongs to a class. To understand what this means, we briefly revisit the concept of odds from statistics. Let $P(Y=c)$ be the probability that a random variable $Y$ equals $c$. The odds of $Y$ being $c$ are defined as\n",
+    "\n",
+    "$$odds(c) = \\frac{P(Y=c)}{1-P(Y=c)}.$$\n",
+    "\n",
+    "What this means gets clear with an example. Assume the random variable $Y$ models the probability of passing an exam and $c=pass$ with $P(Y=pass)=0.75$. This means that the odds of passing the exam are\n",
+    "\n",
+    "$$odds(pass) = \\frac{0.75}{1-0.75} = 3.$$\n",
+    "\n",
+    "In other words, the odds are of passing the exam is three to one. \n",
+    "\n",
+    "The odds are closely related to the logistic or *logit* function, which is defined as\n",
+    "\n",
+    "$$logit(P(Y=c)) = \\ln \\frac{P(Y=c)}{1-P(Y=c)},$$\n",
+    "\n",
+    "i.e., as the natural logarithm of the odds of $c$. This function is the namesake of logistic regression. When we say that the random variable $Y$ models that probability that an instance belongs to a class, and $c \\in C$ are our classes, then $logit(P(Y=c))$ is nothing else but the logarithm of the odds that the instance is of that class.\n",
+    "\n",
+    "The regression is nothing more than a linear regression (details in Chapter 8) of the form\n",
+    "\n",
+    "$$logit(P(Y=c)) = \\ln \\frac{P(Y=c)}{1-P(Y=c)} = b_0 + b_1x_1 + ... + b_mx_m$$\n",
+    "\n",
+    "for with features $\\mathcal{F} = \\mathbb{R}^m$. In two dimensions, the forumula of linear regression describes a line, in three dimensions a plane, etc. This is also how our decision boundaries look like. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "hide_input"
@@ -1060,6 +1081,114 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "plot_decision_surface(LogisticRegression(), X, Y, title=\"Decision Surfaces of Logistic Regression\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The decisions are made along lines that separate the feature space into different regions. A strength of logistic regression is that we can understand how each feature affects the classification. This is because we have a regression model of the logit function. We can reformulate this using the exponential function as follows:\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "&\\ln \\frac{P(Y=c)}{1-P(Y=c)} &= b_0 + b_1x_1 + ... + b_mx_m \\\\\n",
+    "\\Rightarrow\\quad &\\frac{P(Y=c)}{1-P(Y=c)} &= \\exp( b_0 + b_1x_1 + ... + b_mx_m ) \\\\\n",
+    "\\Rightarrow\\quad &odds(c) &= \\exp( b_0 ) \\cdot \\Pi_{i=1}^m \\exp(b_ix_i) \\\\\n",
+    "\\end{split}\n",
+    "$$\n",
+    "\n",
+    "Thus, the odds of the class are the product of these exponentials. The impact of feature $i, i=1, ..., m$ on the odds is $\\exp(b_ix_i)$. From this follows that $exp(b_j)$ is the *odds ratio* of feature $i$. The odds ratio defines by how much the odds change due to this feature. For example, an odds ratio of 2 means that the odds would double if the value of the feature would be increased by one. In general, an odds ratio greater than one means that the odds increase if $x_i$ increases, an odds ratio of less than 1 means that the odds decrease if $x_i$ increases. Because the exponent of the coefficients is the odds ratio, the coefficient are also called the *log odds ratios*. \n",
+    "\n",
+    "We can also determine the odds ratios for our logistic regression model of the Iris. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>intercept</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>setosa</th>\n",
+       "      <td>0.066610</td>\n",
+       "      <td>10.216701</td>\n",
+       "      <td>2733.180675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>versicolor</th>\n",
+       "      <td>1.845467</td>\n",
+       "      <td>0.207923</td>\n",
+       "      <td>6.328398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>virginica</th>\n",
+       "      <td>8.134952</td>\n",
+       "      <td>0.470746</td>\n",
+       "      <td>0.000058</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            sepal length (cm)  sepal width (cm)    intercept\n",
+       "setosa               0.066610         10.216701  2733.180675\n",
+       "versicolor           1.845467          0.207923     6.328398\n",
+       "virginica            8.134952          0.470746     0.000058"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr = LogisticRegression()\n",
+    "lr.fit(X,Y)\n",
+    "odds_df = pd.DataFrame(np.exp(lr.coef_), index=class_names, columns=X.columns)\n",
+    "odds_df['intercept'] = np.exp(lr.intercept_)\n",
+    "odds_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the odds of Setosa increases strongly with the sepal width and decreases with the sepal length. Similarly, we can see that the odds of Versicolor and Virginica both increase with the sepal length and decrease with the sepal width. The intercept are the odds in case all features are exactly 0, i.e., $b_0$. Thus, all changes due to increasing feature values are with respect to the intercept. Because the intercept of Versicolor is larger than that of Virginica, there is a region in which the odds for Versicolor are larger, even though the increase in odds due to the sepal length is weaker and the decrease in odds is stronger than for Virginica. \n",
+    "\n",
+    "> Note: \n",
+    "> \n",
+    "> In this case the intercept is misleading. While the intercept for Setosa is very high, the coefficient for sepal length is very low. Given that the instances all have sepal lengths greater than four, this means that the impact of the large intercept vanishes because of this. For an in-depth analysis, the data should always be centered, e.g., with Z-score standardization. "
    ]
   },
   {
