--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -40,7 +40,7 @@
     "We recommend to setup a local environment as follows: \n",
     "- [Install Python](https://realpython.com/installing-python/)\n",
     "- [Install Jupyter Notebook](https://jupyter.org/install). We recommend installation with pip, because you get this delivered with Python. More experienced users can also use conda. \n",
-    "- Install the required libraries with pip (```pip install numpy scipy scikit-learn pandas matplotlib mlxtend seaborn```). This may require sudo/admin rights. You can also install this in your user space if you add ``--user`` to the command. \n",
+    "- Install the required libraries with pip (```pip install numpy scipy scikit-learn pandas matplotlib mlxtend seaborn```). This may require sudo/admin rights. You can also install this in your user space if you add ``--user`` to the command. The creation of the neural network figure in Chapter 7 also requires the package `graphviz`, which you have to install both with pip, as well as within your operating system. \n",
     "\n",
     "\n",
     "You should now be able to fire up your installation of Jupyter with the command ```jupyter notebook```. Jupyter Notebook runs in the browser and initially shows the home folder in your local file system. You can navigate to the destination where you downloaded the notebooks and open them. You could also upload them to the currently open folder using the browser. \n",
