--- a/content/Exercises.ipynb
+++ b/content/Exercises.ipynb
@@ -12,7 +12,8 @@
     "- [CSV Files and Data Frames](exercises/Exercise_CSV_and_DataFrames)\n",
     "- [Data Exploration with Descriptive Statistics and Visualizations](exercises/Exercise_Data_Exploration)\n",
     "- [Association Rule Mining](exercises/Exercise_Association_Rule_Mining)\n",
-    "- [Clustering](exercises/Exercise_Clustering)"
+    "- [Clustering](exercises/Exercise_Clustering)\n",
+    "- [Classification](exercises/Exercise_Classification)"
    ]
   }
  ],
