--- a/content/Solutions.ipynb
+++ b/content/Solutions.ipynb
@@ -11,7 +11,8 @@
     "- [CSV Files and Data Frames](exercises/Solution_CSV_and_DataFrames)\n",
     "- [Data Exploration with Descriptive Statistics and Visualizations](exercises/Solution_Data_Exploration)\n",
     "- [Association Rule Mining](exercises/Solution_Association_Rule_Mining)\n",
-    "- [Clustering](exercises/Solution_Clustering)"
+    "- [Clustering](exercises/Solution_Clustering)\n",
+    "- [Classification](exercises/Solution_Classification)"
    ]
   }
  ],
